--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -134,29 +134,23 @@ screen.COLORS=Colors
             option.USE_LUT.comment=To use your own colorgrading, unzip this shader's folder, go to '[unzipped folder]/shaders/LUTs' and put a .cube file there. Run the python script in the same folder to use your file as the default LUT.
                 value.USE_LUT.true=Yes
                 value.USE_LUT.false=No
-        option.GAMMA_CORRECT=Gamma correction
-            value.GAMMA_CORRECT.true=On
-            value.GAMMA_CORRECT.false=Off
-        option.GAMMA_CORRECT_PRE=Gamma Correction Prefilter
-            option.GAMMA_CORRECT_PRE.comment=Linearize the Minecraft textures before initializing the shader
-            value.GAMMA_CORRECT_PRE.true=On
-            value.GAMMA_CORRECT_PRE.false=Off
+        option.USER_GAMMA_CORRECT=Gamma correction
+            option.USER_GAMMA_CORRECT.comment=If you don't know what this is, you shouldn't disable it.
+            value.USER_GAMMA_CORRECT.true=On
+            value.USER_GAMMA_CORRECT.false=Off
         screen.ACES=ACES
             screen.ACES.comment=Academy Color Encoding System.
-            option.USE_ACES=Use ACES
-                value.USE_ACES.true=Yes
-                value.USE_ACES.false=No
-            option.OUTPUT_COLORSPACE=Output Colorspace
-                value.OUTPUT_COLORSPACE.0=sRGB
-                value.OUTPUT_COLORSPACE.1=ACEScg (raw)
-                value.OUTPUT_COLORSPACE.2=ACES2065-1
-            option.RTT_MODE=RTT
-                option.RTT_MODE.comment=Attempts to fit the in-scene brightness values to ones your monitor can display. Basically brightness correction.
-                value.RTT_MODE.0=None
-                value.RTT_MODE.1=Divide by 16
-                value.RTT_MODE.2=Reinhard
-                value.RTT_MODE.3=Hable (Uncharted 2)
-                value.RTT_MODE.4=ACES (Unreal Engine 4)
+            option.USER_OUTPUT_COLORSPACE=Output Colorspace
+                value.USER_OUTPUT_COLORSPACE.0=sRGB
+                value.USER_OUTPUT_COLORSPACE.1=ACEScg (raw)
+                value.USER_OUTPUT_COLORSPACE.2=ACES2065-1
+            option.USER_LMT_MODE=LMT
+                option.USER_LMT_MODE.comment=Compresses the game's "realistic" light values into ones your monitor can display. (and does so in a way that looks nice).
+                value.USER_LMT_MODE.0=None (not recommended)
+                value.USER_LMT_MODE.1=Divide by 16 (not recommended)
+                value.USER_LMT_MODE.2=Reinhard
+                value.USER_LMT_MODE.3=Hable (Uncharted 2)
+                value.USER_LMT_MODE.4=ACES (Unreal Engine 4)
 
 
 
