--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -112,7 +112,7 @@ screen.COLORS=Colors
         option.TORCH_TEMP.comment=Block light temperature in Kelvin. The default value is the most physically-accurate. Lower temperatures are redder, while higher temps are more white-ish.
         suffix.TORCH_TEMP=k
     option.SKY_SATURATION=Sky Vibrance
-    option.SKY_BRIGHTNESS=Sky Brightness
+    option.SKY_BRIGHTNESS_USER=Sky Brightness
 
     screen.REALISTIC_COLORS_PREFS=Realistic Colors
         screen.REALISTIC_COLORS_PREFS.comment=Minecraft's default graphics aren't always the most realistic. This subset of options allows the Minecraft textures to be toned down to physically-accurate levels. Feel free to turn this off if you don't like how it looks or if you're using a realistic resource pack.
@@ -171,8 +171,12 @@ screen.RESOURCEPACK=Resourcepack Settings
         value.TEX_RES.0.0009765625=1024×1024
 
 screen.MISC=Misc
-    option.STREAMER_MODE=Streamer Mode
-        option.STREAMER_MODE.comment=Brightens up dark areas, won't look as good but plays nice with compression
+    option.STREAMER_MODE=Darkness
+        option.STREAMER_MODE.comment=Hardcore Darkness: For hardcore players - feel the void. Midnight: For people with fancy monitors - darkness has never been darker. Normal: For normal people - the definitive experience. Streamer Mode: For streamers - brightens up dark areas, won't look as good but plays nice with compression.
+        value.STREAMER_MODE.0=Streamer Mode
+        value.STREAMER_MODE.1=Normal
+        value.STREAMER_MODE.2=Midnight
+        value.STREAMER_MODE.3=Hardcore Darkness
 
 screen.ADVANCED=Advanced
     option.DEBUG_VIEW=Debug View
