--- a/shaders/TODO
+++ b/shaders/TODO
@@ -1,10 +1,11 @@
 Use 3D .dat for LUTs
 Organize buffers
-Foveated Rendering
+Improve sky
 Terrain fades into sky texture instead of solid color
 Fix clouds
 Underwater effects
 
+Foveated Rendering
 Add reveal light cloning
 Improve makeCells() (create more square-ish cells)
 Cool lightning effects
@@ -22,4 +23,3 @@ Use fma wherever possible
 use in/out for functions
 add cycle counts to functions
 reduce branching
-use 
