--- a/shaders/TODO
+++ b/shaders/TODO
@@ -1,11 +1,14 @@
-Use 3D .dat for LUTs
-Organize buffers
-Improve sky
-Terrain fades into sky texture instead of solid color
+Light opaque stuff on deferred pass and use composite to get shadows on transparent objects
+OR
+find out if you can sample shadow textures in gbuffers
+
+turn off shadow backface rendering
+
 Fix clouds
 Underwater effects
 Jitter everything in vsh for Temporal Super-Resolution
 Remove moon/sun when underground
+Dithering for color transitions, especially sky
 
 Idea: seasons?
 
