--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -63,7 +63,7 @@ screen.LIGHTING=Lighting
     screen.SSGI=Global Illumination (SSGI)
         screen.SSGI.comment=Screen-Space Global Illumination is a distant relative of raytracing, and provides a similar look while being more performant.
         option.SSGI_ENABLED=Enabled
-            option.SSGI_ENABLED.comment=Enabled ➤ High performance impact.
+            option.SSGI_ENABLED.comment=Enabled ➤ Omega performance impact.
             value.SSGI_ENABLED.true=Yes
             value.SSGI_ENABLED.false=No
         option.COLORED_LIGHT_ONLY=Mode
@@ -100,6 +100,24 @@ screen.LIGHTING=Lighting
                 option.POWERFUL_SAMPLE_AMOUNT=Determines how much closer samples are prioritized when Closer Sampling is turned on.
             option.OLD_SAMPLING=Old Sampling
                 option.OLD_SAMPLING.comment=Removes proximity correction, prioritizing only sample amount. This may look less grainy, but will result in faraway light sources not affecting the environment.
+    
+    screen.SHADOWS=Shadows
+        screen.SHADOWS.comment=Control realtime shadowmapped shadows.
+            option.SSGI_ENABLED.comment=Enabled ➤ Omega performance impact.
+            value.SSGI_ENABLED.true=Yes
+            value.SSGI_ENABLED.false=No
+        option.SHADOWS_ENABLED_USER=Enabled
+        option.shadowDistance=Shadow Distance
+            option.shadowDistance.comment=How far away the shadows can be, in blocks. Since setting higher distances means the same shadow image is spread over more blocks, shadows become less detailed when the distance is increased. Increased ➤ No performance impact.
+        option.shadowMapResolution=Shadow Resolution
+            option.shadowMapResolution.comment=Controls the resolution of the shadowmap (the shadow image). A higher-resolution shadowmap will increase the detail in shadows and make them look sharper. However, a higher resolution takes longer to calculate, decreasing performance. Increased ➤ High performance impact.
+        option.SHADOW_SUPERSAMPLE=Shadow TSR
+            option.SHADOW_SUPERSAMPLE.comment=Shadow Temporal Super-Resolution. Instead of recalculating shadows in realtime, update them gradually over several frames. Some shadows might not update instantly when this setting is increased. Increased ➤ High performance boost.
+            value.SHADOW_SUPERSAMPLE.0=Off
+            value.SHADOW_SUPERSAMPLE.1=2×
+            value.SHADOW_SUPERSAMPLE.2=4×
+        option.SHADOW_DISTORTION=Shadow Distortion
+            option.SHADOW_DISTORTION.comment=Because things that are farther away appear smaller, the shadowmap (shadow image) is warped to have a higher resolution closer to the player. Lower distortion makes the resolution seem lower, but higher resolution might look weird. Increased ➤ No performance impact.
 
 screen.COLORS=Colors
     option.VANILLA_COLORS=Vanilla Colors
@@ -112,7 +130,12 @@ screen.COLORS=Colors
         option.TORCH_TEMP.comment=Block light temperature in Kelvin. The default value is the most physically-accurate. Lower temperatures are redder, while higher temps are more white-ish.
         suffix.TORCH_TEMP=k
     option.SKY_SATURATION=Sky Vibrance
-    option.SKY_BRIGHTNESS_USER=Sky Brightness
+    option.SKY_COLOR_BLEND=Sky Fog Blending
+        option.SKY_COLOR_BLEND.comment=Controls how desaturated the sky gets on the horizon compared to looking straight up.
+    option.SKY_BRIGHTNESS_USER=Brighten Sky
+        option.SKY_BRIGHTNESS_USER.comment=Controls how bright the sky appears compared to everything else. Does not affect the lighting of blocks (go to the "Light Brightness" screen to control that).
+    option.STAR_WEIGHTS=Brighten Stars
+        option.STAR_WEIGHTS.comment=Controls how bright stars in the night sky appear compared to everything else.
 
     screen.REALISTIC_COLORS_PREFS=Realistic Colors
         screen.REALISTIC_COLORS_PREFS.comment=Minecraft's default graphics aren't always the most realistic. This subset of options allows the Minecraft textures to be toned down to physically-accurate levels. Feel free to turn this off if you don't like how it looks or if you're using a realistic resource pack.
