--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -1,3 +1,7 @@
+profile.ONE=Vanilla §b+
+profile.TWO=Vanilla §b++
+profile.THREE=Vanilla §b+++
+
 screen.POST_PROCESSING=Post Processing
     screen.POST_PROCESSING.comment=Any effects that are applied after the image has been rendered.
     option.CONTRAST=Contrast
