--- a/shaders/TODO
+++ b/shaders/TODO
@@ -2,8 +2,7 @@ Atmospheric fog changes based on biome
 Custom nether fog falloff
 
 Change min/ambient light depending on LMT
-
-Make vanilla shading compatible with streamer mode
+Add option to change between Custom / vanilla / vanilla without old lighting
 
 No backface rendering, use normals to determine shadow validity
 
