Improved vanilla lighting brightness

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -183,8 +183,8 @@ screen.COLORS=Colors
                 value.USER_OUTPUT_COLORSPACE.2=ACES2065-1
             option.USER_LMT_MODE=LMT
                 option.USER_LMT_MODE.comment=Compresses the game's "realistic" light values into ones your monitor can display. (and does so in a way that looks nice).
-                value.USER_LMT_MODE.0=None (not recommended)
-                value.USER_LMT_MODE.1=Divide by 16 (not recommended)
+                value.USER_LMT_MODE.0=§cNone (not recommended)
+                value.USER_LMT_MODE.1=§cDivide by 16 (not recommended)
                 value.USER_LMT_MODE.2=Reinhard
                 value.USER_LMT_MODE.3=Hable (Uncharted 2)
                 value.USER_LMT_MODE.4=ACES (Unreal Engine 4)
