Added lava, water, and snow overlay

--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -57,67 +57,9 @@ screen.LIGHTING=Lighting
         option.BLOCK_LIGHT_MULT_USER=Block Light
             option.BLOCK_LIGHT_MULT_USER.comment=Strength of block light (torch, sea lantern, glowstone, etc.)
 
-    screen.SSAO=Ambient Occlusion
-        screen.SSAO.comment=Ambient Occlusion darkens crevices in between blocks, emulating a similar effect in real life.
-        option.AO_MODE=Mode
-            value.AO_MODE.0=Off
-            value.AO_MODE.1=Vanilla
-            value.AO_MODE.2=SSAO
-        option.AO_RADIUS=Radius
-            option.AO_RADIUS.comment=Increases the sample radius of the ambient occlusion, spreading out and smoothing dark areas. No performance impact.
-        option.AO_INTENSITY=Strength
-            option.AO_INTENSITY.comment=Increases the strength of the SSAO effect, further darkening crevices. No performance impact.
-        option.PRETTY_AO=Smoother AO
-            option.PRETTY_AO.comment=Takes the square root of ambient occlusion effects, making them look nicer. Enabled ➤ Negligible performance impact.
-        option.TEMPORAL_UPDATE_SPEED_AO=Update Speed
-            option.TEMPORAL_UPDATE_SPEED_AO.comment=Changes preservation of AO samples over time. Decreasing this setting makes AO look smoother at the cost of taking longer to adjust to changes. No performance impact.
-        option.AO_SAMPLES=Samples
-            option.AO_SAMPLES.comment=Adjusts how many areas of the screen are "sampled" to determine ambient occlusion. Using a higher number of samples increase smoothness. Increased ➤ Medium performance impact.
-
-    screen.SSGI=Global Illumination (SSGI)
-        screen.SSGI.comment=Screen-Space Global Illumination is a distant relative of raytracing, and provides a similar look while being more performant.
-        option.SSGI_ENABLED=Enabled
-            option.SSGI_ENABLED.comment=Enabled ➤ Omega performance impact.
-            value.SSGI_ENABLED.true=Yes
-            value.SSGI_ENABLED.false=No
-        option.COLORED_LIGHT_ONLY=Mode
-            option.COLORED_LIGHT_ONLY.comment=BETA!. The Global Illumination mode behaves as expected, projecting and bouncing light around the entire scene. Colored Light mode only changes the color of vanilla lighting. Global Illumination ➤ Low performance impact.
-            value.COLORED_LIGHT_ONLY.false=Global Illumination
-            value.COLORED_LIGHT_ONLY.true=Colored Light
-        option.DIM_LIGHT_DESAT_USER=Desaturate Dim Block Light
-            option.DIM_LIGHT_DESAT_USER.comment=When coloring Minecraft's built in lighting, desaturate low-light samples to avoid awkward coloring when the light is offscreen. Increasing this setting decreases the awkward color effect but also decreases overall light color. No performance impact.
-        option.BOUNCE_MULT=Strength
-            option.BOUNCE_MULT.comment=Control the brightness of SSGI. 1.0, the default, is the most physically accurate. No performance impact.
-        option.LIT_MULTIPLIER=Light Source Strength
-            option.LIT_MULTIPLIER.comment=Increase the strength of the global illumination emitted by light sources. This will not affect how bright the light sources look.
-        option.TEMPORAL_UPDATE_SPEED_USER=Update Speed
-            option.TEMPORAL_UPDATE_SPEED_USER.comment=Changes preservation of GI samples over time. Decreasing this setting makes GI look smoother at the cost of taking longer to adjust to changes. No performance impact.
-
-        screen.ADVANCED_SSGI=Advanced SSGI
-            screen.ADVANCED_SSGI.comment=Only change these settings if you know what they do (or are willing to spend a bunch of time fine-tuning).
-            option.USE_SECONDARY_BOUNCES=Use Last Frame GI
-                option.USE_SECONDARY_BOUNCES.comment=Reproject the previous frame's GI values to simulate multiple bounces. Keeping this on is recommended. On ➤ Negligible performance impact.
-            option.ADAPTIVE_SAMPLING_SSGI=Adaptive Sampling
-                option.ADAPTIVE_SAMPLING_SSGI.comment=BETA!. Increase or decrease samples based on already-accumulated samples. Disabling this will make some areas look grainier than others. Enabling this may destabilize framerate. On ➤ Variable performance impact.
-            option.SCREEN_SAMPLES=Samples
-                option.SCREEN_SAMPLES.comment=Adjusts how many areas of the screen are "sampled" to determine global illumination / colored lighting. Using a higher number of samples increase smoothness. Increased ➤ High performance impact.
-            option.MIN_SAMPLES=Minimum Samples
-            option.MAX_SAMPLES=Maximum Samples
-            option.MAX_NEW_SAMPLES=Revealed Multiplier
-            option.MAX_LIGHT_PROPAGATION=Maximum Light Distance
-                option.MAX_LIGHT_PROPAGATION.comment=BETA!. Only applies if COLORED_LIGHT_ONLY is on. No performance impact.
-            option.SELF_ILLUMINATION=Self-Illumination
-                option.SELF_ILLUMINATION.comment=Determines how much flat planes can illuminate themselves. For instance, if a sea lantern were placed in a hole with flat terrain surrounding it, a higher self-illumination would cause it to light up more of the terrain (even if it's technically inset into the terrain).
-            option.POWERFUL_SAMPLE=Closer Sampling
-                option.POWERFUL_SAMPLE.comment=BETA!. When sampling a pixel, prioritize samples closer in proximity to it. May result in less-accurate lighting if Old Sampling is enabled.
-            option.POWERFUL_SAMPLE_AMOUNT=Closer Sampling Amount
-                option.POWERFUL_SAMPLE_AMOUNT=Determines how much closer samples are prioritized when Closer Sampling is turned on.
-            option.OLD_SAMPLING=Old Sampling
-                option.OLD_SAMPLING.comment=Removes proximity correction, prioritizing only sample amount. This may look less grainy, but will result in faraway light sources not affecting the environment.
-    
     screen.SHADOWS=Shadows
         screen.SHADOWS.comment=Control realtime shadowmapped shadows.
-            option.SSGI_ENABLED.comment=Enabled ➤ Omega performance impact.
+            option.SSGI_ENABLED.comment=Enabled ➤ Large performance impact.
             value.SSGI_ENABLED.true=Yes
             value.SSGI_ENABLED.false=No
         option.SHADOWS_ENABLED_USER=Enabled
@@ -126,7 +68,7 @@ screen.LIGHTING=Lighting
         option.shadowMapResolution=Shadow Resolution
             option.shadowMapResolution.comment=Controls the resolution of the shadowmap (the shadow image). A higher-resolution shadowmap will increase the detail in shadows and make them look sharper. However, a higher resolution takes longer to calculate, decreasing performance. Increased ➤ High performance impact.
         option.SHADOW_SUPERSAMPLE=Shadow TSR
-            option.SHADOW_SUPERSAMPLE.comment=Shadow Temporal Super-Resolution. Instead of recalculating shadows in realtime, update them gradually over several frames. Some shadows might not update instantly when this setting is increased. Increased ➤ High performance boost.
+            option.SHADOW_SUPERSAMPLE.comment=Shadow Temporal Super-Resolution. Instead of recalculating shadows in realtime, update them gradually over several frames. Some shadows might not update instantly when this setting is increased. Increased ➤ Large performance boost.
             value.SHADOW_SUPERSAMPLE.0=Off
             value.SHADOW_SUPERSAMPLE.1=2×
             value.SHADOW_SUPERSAMPLE.2=4×
@@ -215,6 +157,8 @@ screen.MISC=Misc
         value.STREAMER_MODE.1=Normal
         value.STREAMER_MODE.0=Streamer Mode
         value.STREAMER_MODE.-1=Fullbright
+
+    screen.EXPERIMENTAL=Experimental
 
 screen.ADVANCED=Advanced
     option.DEBUG_VIEW=Debug View
