--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -9,19 +9,6 @@ screen.POST_PROCESSING=Post Processing
     option.EXPOSURE=Exposure
         option.EXPOSURE.comment=Increases the brightness of the image while preserving dark areas. You can also control this setting through the vanilla "Brightness" slider. No performance impact.
 
-    screen.EXPOSURE_PREFS=Auto-Exposure
-        screen.EXPOSURE_PREFS.comment=Controls how the image adjusts to the environment's brighness, similar to how your eyes adjust to bright lights.
-        option.EXPOSURE_SAMPLES=Samples
-            option.EXPOSURE_SAMPLES.comment=Adjusts how many areas of the screen are "sampled" to determine exposure. Lower samples may lead to some flickering or less accurate auto-exposure. Increased ➤ Small performance impact.
-        option.EXPOSURE_UPDATE_SPEED=Adjustment Speed
-            option.EXPOSURE_UPDATE_SPEED.comment=Changes how fast the exposure adapts to changes in lighting. Increasing this setting will decrease smoothness but increase responsiveness. Setting this higher than intended may cause extreme flickering in some cases! No performance impact.
-        option.MIN_EXPOSURE=Minimum Exposure
-            option.MIN_EXPOSURE.comment=Changes the darkest that auto-exposure can make your image. Setting this too high may cause bright environments (like daylit outdoors) to look blown-out. No performance impact.
-        option.MAX_EXPOSURE=Maximum Exposure
-            option.MAX_EXPOSURE.comment=Changes the brightest that auto-exposure is allowed to make your image. Setting this too low may lead to unlit areas (like caves) losing detail and looking too dark. No performance impact.
-        option.EXPOSURE_BOUNDS=Stabilization Bounds
-            option.EXPOSURE_BOUNDS.comment=Decreases flickering by limiting individual samples. Setting this too low may limit responsiveness, even with adjustment speed set high. Setting this too high may cause extreme flickering!. No performance impact.
-
 screen.LIGHTING=Lighting
     option.VANILLA_LIGHTING=Lighting Mode
         value.VANILLA_LIGHTING.true=Vanilla
@@ -35,6 +22,16 @@ screen.LIGHTING=Lighting
         value.ATMOSPHERIC_FOG_USER.false=No
 
     option.ATMOSPHERIC_FOG_DENSITY=Atmospheric Fog Density
+
+    screen.SSAO_BETA=Ambient Occlusion
+    screen.SSAO=Ambient Occlusion §c(Experimental)§r
+        option.AO_MODE=Mode
+            option.AO_MODE.comment=Screen-Space ➤ Medium performance hit.
+            value.AO_MODE.0=Off
+            value.AO_MODE.1=Vanilla
+            value.AO_MODE.2=Screen-Space §c(Experimental)
+        option.AO_INTENSITY=Intensity
+            option.AO_INTENSITY.comment=How noticeable the ambient occlution is (i.e.§r how much it darkens crevices). No performance impact.
 
     screen.LIGHT_STRENGTH=Light Brightness
         screen.LIGHT_STRENGTH.comment=Control the brightness of individual lights.
@@ -57,23 +54,33 @@ screen.LIGHTING=Lighting
         option.BLOCK_LIGHT_MULT_USER=Block Light
             option.BLOCK_LIGHT_MULT_USER.comment=Strength of block light (torch, sea lantern, glowstone, etc.)
 
-    screen.SHADOWS=Shadows
-        screen.SHADOWS.comment=Control realtime shadowmapped shadows.
-            option.SSGI_ENABLED.comment=Enabled ➤ Large performance impact.
-            value.SSGI_ENABLED.true=Yes
-            value.SSGI_ENABLED.false=No
-        option.SHADOWS_ENABLED_USER=Enabled
-        option.shadowDistance=Shadow Distance
-            option.shadowDistance.comment=How far away the shadows can be, in blocks. Since setting higher distances means the same shadow image is spread over more blocks, shadows become less detailed when the distance is increased. Increased ➤ No performance impact.
-        option.shadowMapResolution=Shadow Resolution
-            option.shadowMapResolution.comment=Controls the resolution of the shadowmap (the shadow image). A higher-resolution shadowmap will increase the detail in shadows and make them look sharper. However, a higher resolution takes longer to calculate, decreasing performance. Increased ➤ High performance impact.
-        option.SHADOW_SUPERSAMPLE=Shadow TSR
-            option.SHADOW_SUPERSAMPLE.comment=Shadow Temporal Super-Resolution. Instead of recalculating shadows in realtime, update them gradually over several frames. Some shadows might not update instantly when this setting is increased. Increased ➤ Large performance boost.
-            value.SHADOW_SUPERSAMPLE.0=Off
-            value.SHADOW_SUPERSAMPLE.1=2×
-            value.SHADOW_SUPERSAMPLE.2=4×
-        option.SHADOW_DISTORTION=Shadow Distortion
-            option.SHADOW_DISTORTION.comment=Because things that are farther away appear smaller, the shadowmap (shadow image) is warped to have a higher resolution closer to the player. Lower distortion makes the resolution seem lower, but higher resolution might look weird. Increased ➤ No performance impact.
+screen.SHADOWS=Shadows
+    screen.SHADOWS.comment=Control realtime shadowmapped shadows.
+        option.SSGI_ENABLED.comment=Enabled ➤ Huge performance hit.
+        value.SSGI_ENABLED.true=Yes
+        value.SSGI_ENABLED.false=No
+    option.SHADOWS_ENABLED_USER=Enabled
+    option.shadowDistance=Shadow Distance
+        option.shadowDistance.comment=How far away the shadows can be, in blocks. Since setting higher distances means the same shadow image is spread over more blocks, shadows become less detailed when the distance is increased. Increased ➤ No performance impact.
+    option.shadowMapResolution=Shadow Resolution
+        option.shadowMapResolution.comment=Controls the resolution of the shadowmap (the shadow image). A higher-resolution shadowmap will increase the detail in shadows and make them look sharper. However, a higher resolution takes longer to calculate, decreasing performance. Increased ➤ High performance hit.
+    option.SHADOW_SUPERSAMPLE=Shadow TSR
+        option.SHADOW_SUPERSAMPLE.comment=Shadow Temporal Super-Resolution improves performance by updating shadows over several frames. Some shadows might not update instantly when this setting is increased. Shadow update speed depends on framerate, so 60+ fps is recommended for the 4× setting. Increased ➤ Large performance boost.
+        value.SHADOW_SUPERSAMPLE.0=Off
+        value.SHADOW_SUPERSAMPLE.1=2×
+        value.SHADOW_SUPERSAMPLE.2=4×
+    option.SHADOW_DISTORTION=Shadow Distortion
+        option.SHADOW_DISTORTION.comment=Because things that are farther away appear smaller, the shadowmap (shadow image) is warped to have a higher resolution closer to the player. Lower distortion makes the resolution seem lower, but higher resolution might look weird. Increased ➤ No performance impact.
+    option.SHADOW_FILTERING=Filtering
+        option.SHADOW_FILTERING.comment=Makes shadows look nicer by blurring them. Enabled ➤ Large performance hit (based on number of samples).
+        value.SHADOW_FILTERING.0=Off
+        value.SHADOW_FILTERING.1=PCF
+        value.SHADOW_FILTERING.2=VP Lite §c(Experimental)
+        value.SHADOW_FILTERING.3=VP §c(Experimental)
+    option.SHADOW_FILTERING_RADIUS=Filtering Radius
+        option.SHADOW_FILTERING_RADIUS.comment=How much the shadow is blurred (if filtering is enabled).
+    option.SHADOW_FILTERING_SAMPLES=Number of Samples
+        option.SHADOW_FILTERING_SAMPLES.comment=More samples make the shadow blur less grainy (if filtering is enabled). Increased ➤ Large performance hit.
 
 screen.COLORS=Colors
     option.VANILLA_COLORS=Vanilla Colors
@@ -136,7 +143,7 @@ screen.COLORS=Colors
 screen.RESOURCEPACK=Resourcepack Settings
     screen.RESOURCEPACK.comment=Make sure to look at these settings if you have a resourcepack enabled.
     option.TEX_RENDER=Pixel Perfect
-        option.TEX_RENDER.comment=Enables the authentic Pixel Perfect look by using a single color per Minecraft texture pixel. Off ➤ Performance impact varies.
+        option.TEX_RENDER.comment=Enables the authentic Pixel Perfect look by using a single color per Minecraft texture pixel. Off ➤ performance hit varies.
     option.TEX_RES=Resource Pack Resolution
         option.TEX_RES.comment=Anything above 1024×1024 is near-identical to just turning off the Pixel Perfect setting
         value.TEX_RES.0.25=4×4
