--- a/shaders/lang/en_US.lang
+++ b/shaders/lang/en_US.lang
@@ -12,7 +12,7 @@ screen.POST_PROCESSING=Post Processing
 screen.LIGHTING=Lighting
     option.VANILLA_LIGHTING=Lighting Mode
         value.VANILLA_LIGHTING.0=Optifine
-        value.VANILLA_LIGHTING.1=Vanilla
+        value.VANILLA_LIGHTING.1=Vanilla §b+
         value.VANILLA_LIGHTING.2=Custom
 
     option.CUTOUT_ALIGN_STRENGTH=Grass Transluscency
